# python-sample

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/python_sample/: __init__.py
tests/: __init__.py  test_init.py
